--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <footer class="fixed-bottom p-2 text-center bg-dark text-white" >
+    <footer class="fixed-bottom text-center bg-secondary text-white" >
       <small>Copyright &copy; Kaori Caplan 2020</small>
   </body>
 </html>
